# needle

./: .eslintrc.js  README.md  package.json  pnpm-lock.yaml
.changeset/: config.json
.github/workflows/: desktop-publish.yml  release.yml
apps/desktop/: .env  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop-bak/src/: MainApp.tsx
apps/desktop-bak/src/common/: initFower.ts
apps/desktop/src/: App.tsx  MainApp.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: dev.rs  lib.rs  tray.rs  util.rs
apps/desktop/src-tauri/src/util/: icons.rs
apps/desktop/src/api/: app.ts  os.ts
apps/desktop/src/common/: createTrayIcon.ts  handleEscape.ts  initFower.ts  installBuiltinExtension.ts  loginToDesktop.ts  types.ts  watchDesktopLogin.ts  watchExtensionDevChange.ts
apps/desktop/src/components/: AddNodeBtn.tsx  AppProvider.tsx  DesktopWelcome.tsx  EditorApp.tsx  EditorModeApp.tsx  ToggleModeButton.tsx  command-components.tsx
apps/desktop/src/components/BindAppHotkey/: utils.ts
apps/desktop/src/components/CommandPalette/: CommandComponents.ts  CommandPalette.tsx  CommandPaletteFooter.tsx  ListItemIcon.tsx  ListItemUI.tsx
apps/desktop/src/hooks/: useCommandAppUI.ts  useCommandPosition.ts  useCurrentCommand.ts  useDatabases.ts  useExtensions.ts  useHandleSelect.ts  useItems.ts  useOnMessage.ts  usePosts.ts  useReset.ts  useSearch.ts
apps/desktop/src/lib/: app-emitter.ts  uploadFile.ts  utils.ts
apps/desktop/src/styles/: globals.css
apps/docs/: package.json
apps/extension/: package.json
apps/mobile/: package.json
apps/whitepaper/: package.json
apps/whitepaper/pages/: about.md  index.md  space-e.md  space.md
extension-samples/base64/: package.json
extension-samples/extension-react-example/: package.json
extension-samples/extension-template-react/: package.json
extension-samples/extension-template-solid/: package.json
extension-samples/extension-template-svelte/: package.json
extension-samples/extension-template-vue/: package.json
extension-samples/github-trending/: package.json
extension-samples/hacker-news/: package.json
(+181 files in other folders)
