[package]
name = "PenX"
version = "0.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "penx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.1", features = [
  "image-png",
  "image-ico",
  "tray-icon",
  "devtools",
] }
tauri-plugin-opener = "2.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

actix-web = "4"
actix-cors = "0.6.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
open = "4.1.0"
tauri-plugin-clipboard = "2.0.0-beta.2"
window-shadows = "0.2.2"
window-vibrancy = "0.5.0"
auto-launch = "0.4.0"
rust_search = "2.1.0"
plist = "1"
strsim = "0.10.0"
directories = "4.0.1"
smartcalc = { git = "https://github.com/ParthJadhav/smartcalc", branch = "stable" }
chrono-tz = { version = "0.6.1", default-features = false }
num-format = { version = "0.4", features = ["with-system-locale"] }
localzone = "0.2.0"
sys-locale = "0.2.3"
chrono = "0.4"
objc = "0.2.7"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-http = "2.2.0"
urlencoding = "2.1.3"
tauri-plugin-jarvis = { path = "../../../packages/tauri-plugin-jarvis" }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-shellx = "2.0.12"
winapi = { version = "0.3.9", features = ["errhandlingapi"] }
uuid = { version = "1.8.0", features = ["v4"] }
ico = "0.3.0"

# MacOS
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[target."cfg(target_os = \"windows\")".dependencies]
tauri-winres = "0.1.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.6"
